# devopsdsm-containers

./: .gitignore  .pre-commit-config.yaml  README.md  index.md  package-lock.json
.devcontainer/: devcontainer.json  docker-compose.yml
assets/: custom.css
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: main.ts
server/: .env.development  main.py  pyproject.toml
slides/: index.md  package-lock.json  package.json
